--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <header></header>
 <h1>This is the first HTML file<h1>
 <p>This is a new file created to experiment with GIT pull request and commit</p>
-<footer></footer>
+<footer>This is footer</footer>
 </body>
 </html>
